iptables.txt
# Generated by iptables-save v1.8.4 on Thu Oct 13 22:14:23 2022
*mangle
:PREROUTING ACCEPT [2849:204225]
:INPUT ACCEPT [2849:204225]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2452:361148]
:POSTROUTING ACCEPT [2452:361148]
-A POSTROUTING -o lxcbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Thu Oct 13 22:14:23 2022
# Generated by iptables-save v1.8.4 on Thu Oct 13 22:14:23 2022
*nat
:PREROUTING ACCEPT [1:60]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [822:50538]
:POSTROUTING ACCEPT [822:50538]
-A POSTROUTING -s 10.0.3.0/24 ! -d 10.0.3.0/24 -j MASQUERADE
COMMIT
# Completed on Thu Oct 13 22:14:23 2022
# Generated by iptables-save v1.8.4 on Thu Oct 13 22:14:23 2022
*filter
:INPUT ACCEPT [2849:204225]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2452:361148]
-A INPUT -i lxcbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i lxcbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i lxcbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i lxcbr0 -p udp -m udp --dport 67 -j ACCEPT
-A FORWARD -o lxcbr0 -j ACCEPT
-A FORWARD -i lxcbr0 -j ACCEPT
COMMIT
# Completed on Thu Oct 13 22:14:23 2022
